--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                 </div>
                 <div class="col-sm-6">
                     <h2>the ask</h2>
+
                     <h3>
                         <ul style="padding-left: 25px">
                             <li>predict the locations of all traffic signals and streetlamps in a given CMA</li>
@@ -567,8 +568,8 @@
 <script>
     function scrollToAnchor(aid) {
         $('html,body').animate({
-            scrollTop: aid.offset().top}, 'slow');
-//        $('html,body').animate({scrollTop: aid.offset().top}, 'slow');
+            scrollTop: aid.offset().top
+        }, 'slow');
 
     }
 
