minor formatting and content changes

--- a/index.html
+++ b/index.html
@@ -169,7 +169,15 @@
 
                     <h3>
                         <ul style="padding-left: 25px">
-                            <li>where are all the traffic signals and streetlamps in multiple CMAs?</li>
+                            <li>where are all the traffic signals and streetlamps in the following CMAs:</li>
+                            <ul style="padding-left: 25px">
+                                <li>New York</li>
+                                <li>Los Angeles</li>
+                                <li>Chicago</li>
+                                <li>Oakland/San Francisco</li>
+                                <li>Philadelphia</li>
+                                <li>and 15 others</li>
+                            </ul>
                         </ul>
                     </h3>
                     <h2>the requirements</h2>
