minor formatting and content changes

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                     <div class="hline"></div>
                 </div>
                 <div class="col-sm-6">
-                    <h2>the results</h2>
+                    <h2>more like the successes</h2>
                     <ul style="padding-left: 25px">
                         <h3>
                             <li>
