--- a/index.html
+++ b/index.html
@@ -295,12 +295,12 @@
         <div id="slide5" class="container mtb" style="margin-top:30px;">
             <div class="row">
                 <div class="col-sm-12">
-                    <h1>the results</h1>
+                    <h1>the result</h1>
 
                     <div class="hline"></div>
                 </div>
                 <div class="col-sm-6">
-                    <h2>more like the successes</h2>
+                    <h2>more like the success</h2>
                     <ul style="padding-left: 25px">
                         <h3>
                             <li>
